saving dataset to folder and adding it to gitignore

--- a/data.ipynb
+++ b/data.ipynb
@@ -49,9 +49,7 @@
     "\n",
     "# Load the Arrow file directly into a dataset\n",
     "train_dataset = Dataset.from_file(\"../datasets/huggingface/mri_segmentation_dataset/train/data-00000-of-00001.arrow\")\n",
-    "test_dataset = Dataset.from_file(\"../datasets/huggingface/mri_segmentation_dataset/test/data-00000-of-00001.arrow\")\n",
-    "\n",
-    "#tf.keras.backend.set_image_data_format('channels_last')"
+    "test_dataset = Dataset.from_file(\"../datasets/huggingface/mri_segmentation_dataset/test/data-00000-of-00001.arrow\")"
    ]
   },
   {
